--- a/EtsySearch/Base.lproj/Main.storyboard
+++ b/EtsySearch/Base.lproj/Main.storyboard
@@ -20,8 +20,8 @@
                                 <rect key="frame" x="0.0" y="20" width="320" height="44"/>
                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="44" id="owQ-fa-CR4"/>
-                                    <constraint firstAttribute="width" constant="320" id="xw2-vc-mNv"/>
+                                    <constraint firstAttribute="width" constant="320" id="TXb-P9-0HO"/>
+                                    <constraint firstAttribute="height" constant="44" id="mX2-IT-hJN"/>
                                 </constraints>
                                 <textInputTraits key="textInputTraits"/>
                                 <connections>
@@ -76,9 +76,8 @@
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                         <constraints>
-                            <constraint firstItem="qnr-yr-XtS" firstAttribute="top" secondItem="jyV-Pf-zRb" secondAttribute="bottom" id="7q2-aW-qLe"/>
-                            <constraint firstItem="qnr-yr-XtS" firstAttribute="leading" secondItem="kh9-bI-dsS" secondAttribute="leading" constant="20" symbolic="YES" id="D2t-f8-qGy"/>
-                            <constraint firstAttribute="trailing" secondItem="qnr-yr-XtS" secondAttribute="trailing" constant="20" symbolic="YES" id="QQp-A1-gJT"/>
+                            <constraint firstItem="qnr-yr-XtS" firstAttribute="leading" secondItem="kh9-bI-dsS" secondAttribute="leading" id="gzX-YQ-R43"/>
+                            <constraint firstItem="qnr-yr-XtS" firstAttribute="top" secondItem="jyV-Pf-zRb" secondAttribute="bottom" id="zi3-qG-7qi"/>
                         </constraints>
                     </view>
                     <extendedEdge key="edgesForExtendedLayout"/>
